# operations_over_polynom_in_field_and_orthonormal_basis

./: .gitignore  CMakeLists.txt  lab3_protocol.docx  lab4_protocol.docx
SpRzOM CP3/: Field.cpp  Field.h  main.cpp
SpRzOM CP4/: NB.cpp  NB.h  main.cpp
